--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
-bcrypt==4.1.3
+bcrypt==3.2.0
 certifi==2024.2.2
 cffi==1.16.0
 click==8.1.7
@@ -19,6 +20,7 @@ httpx==0.27.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -47,5 +49,6 @@ typer==0.12.3
 typing_extensions==4.11.0
 ujson==5.9.0
 uvicorn==0.29.0
+uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
