--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ SQLAlchemy==2.0.30
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.11.0
+tzdata==2024.2
 ujson==5.9.0
 uvicorn==0.29.0
 watchfiles==0.21.0
